/*
 * Copyright (c) 2023 RobustMQ Team
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package mqtt;
service MqttBrokerService {
    rpc updateCache(UpdateCacheRequest) returns(CommonReply){}
    rpc deleteSession(DeleteSessionRequest) returns(CommonReply){}
}

message UpdateCacheRequest{
}

message DeleteSessionRequest{
    string cluster_name = 1;
    repeated string client_id = 2;
}

message CommonReply{
    bool code = 1;
    string data = 2;
}